# redact-ner-ruby

./: .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE  LICENSE-MIT  README.md  Rakefile  redact_ner.gemspec
.beads/: .gitignore  issues.jsonl  metadata.json
.github/workflows/: ci.yml  release-prep.yml  release-tag-on-merge.yml  release.yml
docs/plans/: 2026-05-17-multiplatform-gem-design.md  2026-05-17-multiplatform-gem.md  2026-05-17-release-app-token.md  2026-05-17-release-automation.md  2026-06-05-gvl-release-design.md
examples/: README.md  basic_usage.rb  check_availability.rb  with_email_regex.rb  with_onnxruntime_gem.rb
ext/redact_ner/: Cargo.toml  extconf.rb
ext/redact_ner/src/: lib.rs
lib/: redact_ner.rb
lib/redact_ner/: version.rb
script/: next_version.rb
test/: test_gvl_release.rb  test_helper.rb  test_next_version.rb  test_redact_ner.rb
vendor-spike/redact-ner-0.8.3/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
vendor-spike/redact-ner-0.8.3/src/: lib.rs  recognizer.rs  tokenizer_wrapper.rs
vendor-spike/redact-ner-0.8.3/tests/: ner_e2e.rs
