[package]
name = "redact_ner"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
redact-ner = "0.8.3"
redact-core = "0.8.3"

# SPIKE (redact-ner-ruby-8w8): openssl-sys vendored pin removed. With redact-ner
# patched to ort default-features=false, download-binaries/tls-native are gone,
# so the ureq -> native-tls -> openssl-sys chain no longer exists.
